# keycloak-samples

./: .gitignore  README.md  app.py  docker-compose.yaml  get_oidc_config.sh  pyproject.toml  refine_app.py  test_client.py
resources/keycloak-quickstarts/js/spa/: app.js
resources/keycloak-quickstarts/js/spa/config/: config.js  realm-import.json
resources/keycloak-quickstarts/js/spa/public/: index.html
resources/keycloak-quickstarts/nodejs/resource-server/: .access_token  get_token.sh  keycloak.json
resources/keycloak-quickstarts/nodejs/resource-server/config/: config.js
resources/oreilly-keycloak-book/: README.md
resources/oreilly-keycloak-book/ch13/simple-risk-based-authenticator/: README.md  pom.xml
resources/oreilly-keycloak-book/ch13/themes/mytheme/: pom.xml
resources/oreilly-keycloak-book/ch2/backend/: app.js
resources/oreilly-keycloak-book/ch2/frontend/: app.js
resources/oreilly-keycloak-book/ch4/: app.js  index.html
resources/oreilly-keycloak-book/ch5/backend/: keycloak.json
resources/oreilly-keycloak-book/ch5/frontend/: app.js  client.js  index.html
resources/oreilly-keycloak-book/ch6/: app.js
resources/oreilly-keycloak-book/ch7/golang/: main.go
resources/oreilly-keycloak-book/ch7/nodejs/backend/: package.json
resources/oreilly-keycloak-book/ch7/nodejs/frontend/: keycloak.json  package.json
resources/oreilly-keycloak-book/ch7/python/backend/: oidc-config.json
resources/oreilly-keycloak-book/ch7/python/frontend/: oidc-config.json
resources/oreilly-keycloak-book/ch9/: haproxy.cfg  keycloak.conf
(+4 files in other folders)
