[project]
name = "keycloak-samples"
version = "0.1.0"
description = "deplopment on keycloak"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv-flow>=0.4.0",
    "fastapi-keycloak>=1.1.0",
    "fastapi>=0.115.13",
    "python-jose[cryptography]>=3.5.0",
    "python-keycloak[requests]>=5.7.0",
    "uvicorn>=0.35.0",
]
